# python_module_08

./: .gitignore  HOW_TO_WRITE_PYPROJECT_TOML.md  README.md
ex0/: construct.py
ex1/: README.md  loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  oracle.py
